# copter

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  i2c.cpp  i2c.h  main.cpp  main.h  serial.cpp  serial.h  utils.cpp  utils.h
src/sensor/: baro.cpp  baro.h  barometer.cpp  barometer.h  bma180.cpp  bma180.h  bmp085.cpp  bmp085.h  hmc5883.cpp  hmc5883.h  imu.cpp  imu.h  itg3200.cpp  itg3200.h  sensors.cpp  sensors.h
